[FIX] #597 api user domain import error fix v1